Fixed alignment issues in ui

--- a/videoSpeedSelector/CSS/popup.css
+++ b/videoSpeedSelector/CSS/popup.css
@@ -13,9 +13,9 @@ li {
 ul {
     padding-left: 10px;
     padding-right: 10px;
-    list-style-type: circle;
+    list-style-type: disc;
     list-style: inside;
-    text-align: center;  
+    text-align: left;  
     vertical-align: middle;
 }
 
@@ -77,7 +77,9 @@ body {
 }
 
 #instructions {
-    border-top: 0px solid rgba(200, 200, 200, 0.1);
+    margin-left: 12px;
+    margin-right: 12px;
+    text-align: center;
     
 }
 
@@ -95,7 +97,6 @@ body {
     background: rgba(200, 200, 200, 0.25);
     display: inline-block;
     position: relative;
-    right: 0%;
     padding: 10px;
     border-radius: 5px;
     width: 40%
@@ -105,7 +106,6 @@ body {
     background: rgba(200, 200, 200, 0.25);
     display: inline-block;
     position: relative;
-    left: 0%;
     padding: 10px;
     border-radius: 5px;
     width: 40%
@@ -122,13 +122,13 @@ body {
 
 #applyButton {
     position: relative;
-    width: 45%;
+    width: 178px;
     
 }
 
 #defaultButton {
     position: relative;
-    width: 45%;  
+    width: 178px;  
     
 }
 
@@ -146,7 +146,7 @@ body {
     -webkit-transition: 0.25s; 
     transition: opacity 0.25s;
     margin: 15px;
-    width: 91%;
+    width: 360px;
     height: 10px;
 
     /*  Link: https://stackoverflow.com/a/57153340
@@ -179,9 +179,10 @@ body {
 
 
 #status {
-    clear: both;
     text-align: center;
-    padding: 10px;
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-top: 10px;
     vertical-align: middle;
 }
 
